--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -6,12 +6,16 @@
   font-optical-sizing: auto;}
 
   header{
-    background-color: bisque;
-    padding-top: 50px;
+    background-color: #FFF8F3;
+    background-image: url('../images/developer.png'),url('/images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+    background-size: 80px auto,600px auto ;
   }
 
 .logo{
-    font-size: 45%;
+       background-position: top left, bottom right;
+    padding-top: 50px; font-size: 45%;
     font-weight: 900px;
 }
 .color-orange{
@@ -29,7 +33,7 @@ nav .menu{
   nav{
     width: 75%;
     max-width: 1440px;
-    border: 2px solid tomato;
+    /* border: 2px solid tomato; */
     margin: 0px auto;
      display: flex;
     justify-content: space-between;
@@ -51,4 +55,37 @@ nav .menu a{
     font-size: 20px;
     font-weight: bold;
     color: white;
+}
+#banner .banner-content{
+    max-width: 585px;
+}
+#banner {
+/* border: 1px solid tomato; */
+margin: 37px 38px 0 230px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+#banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 900px;
+     color: #474747;
+     margin-bottom: 5px;
+}
+#banner .banner-content h1{
+    font-size: 60px;
+    font-weight: bold;
+    color: #181811;
+    margin-bottom: 30px;
+}
+#banner .banner-content p{
+    font-size: 15px;
+    width: 400px;
+    color: #757575;
+    line-height: 20px; 
+    margin-bottom: 15px;
+}
+#banner .banner-image img{
+    max-width: 450px;
+    vertical-align: middle;
 }
