--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -10,7 +10,7 @@
     background-image: url('../images/developer.png'),url('/images/header_bg.png');
     background-repeat: no-repeat;
     background-position: top left, bottom right;
-    background-size: 80px auto,600px auto ;
+    background-size: 80px auto,650px auto ;
   }
 
 .logo{
@@ -56,6 +56,20 @@ nav .menu a{
     font-weight: bold;
     color: white;
 }
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+}
+.section-heading h2{
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.section-heading p{
+    font-size: 15px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+}
 #banner .banner-content{
     max-width: 585px;
 }
@@ -89,3 +103,38 @@ align-items: center;
     max-width: 450px;
     vertical-align: middle;
 }
+#about{ 
+    padding-top: 130px;
+}
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 156px;
+}
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info .info-card p{
+ font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+.about-info .info-card h4{
+    font-size: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
