--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -5,18 +5,22 @@
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;}
 
-  header{
-    background-color: #FFF8F3;
-    background-image: url('../images/developer.png'),url('/images/header_bg.png');
-    background-repeat: no-repeat;
-    background-position: top left, bottom right;
-    background-size: 80px auto,650px auto ;
-  }
+ header{
+  background-color: #FFF8F3;
+  background-image: url('../images/developer.png'),
+                    url('/images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+  background-size: 80px auto, 650px auto;
+  min-height: auto; 
+   overflow: hidden; 
+}
+
 
 .logo{
-       background-position: top left, bottom right;
-    padding-top: 50px; font-size: 45%;
-    font-weight: 900px;
+    padding-top: 20px;
+     font-size: 45px;
+    font-weight: 900;
 }
 .color-orange{
     color: orange;
@@ -59,6 +63,7 @@ nav .menu a{
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 }
 .section-heading h2{
     font-size: 30px;
@@ -71,14 +76,15 @@ nav .menu a{
     color: #757575;
 }
 #banner .banner-content{
-    max-width: 585px;
+   padding: 50px;
 }
 #banner {
 /* border: 1px solid tomato; */
-margin: 37px 38px 0 230px;
+margin: 0 auto;
 display: flex;
 justify-content: space-between;
 align-items: center;
+padding: 0;
 }
 #banner .banner-content h2{
     font-size: 45px;
@@ -96,7 +102,7 @@ align-items: center;
     font-size: 15px;
     width: 400px;
     color: #757575;
-    line-height: 20px; 
+    line-height: 30px; 
     margin-bottom: 15px;
 }
 #banner .banner-image img{
@@ -104,7 +110,7 @@ align-items: center;
     vertical-align: middle;
 }
 #about{ 
-    padding-top: 130px;
+    padding-top: 80px;
 }
 #about .about-container{
     width: 71%;
@@ -126,9 +132,77 @@ align-items: center;
 .about-info .info-card h4{
     font-size: 20px;
 }
+.skills{
+    padding: 130px 0;
+}
+.skills .skill-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.skills .skill-container .skill-box{
+  display: flex;
+  gap: 24px;
+}
+.skill-box .skill-card{
+    padding: 30px;
+    border: 1px solid tomato;
+    box-shadow: 0px 6px 50px 0px #0000004e;
+    max-width: 267px;
+}
+.skill-card img{
+    width: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h3{
+    font-size: 20px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.skill-card p{
+    font-size: 16px;
+    color: #757575;
+    line-height: 28px;}
 
+#resume{
+    padding: 130px;
+} 
+#resume .resume-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 113px auto 0;
+    display: flex;
+    gap: 24px;
+}
+.resume-container .section-title{
+    color: #474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.resume-card{
+    max-width: 511px;
+    margin-right: 47px;
+}
+.resume-card .card-title{
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #474747;
+}
+.resume-card .card-info{
+    font-size: 13px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: #757575;
+}
+.resume-card .card-info{
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;}
 
-
+.resume-container hr{
+    margin: 30px 0;
+}
 
 
 
