--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -60,6 +60,9 @@ nav .menu a{
     font-weight: bold;
     color: white;
 }
+.text-center{
+    text-align: center;
+}
 .section-heading{
     max-width: 827px;
     text-align: center;
@@ -203,8 +206,38 @@ padding: 0;
 .resume-container hr{
     margin: 30px 0;
 }
-
-
+footer{
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    padding: 130px 0;
+}
+footer .footer-container {
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    gap: 116px;
+}
+.footer-container .social{
+    max-width: 562px;
+}
+.footer-container .social  p{
+    color: #474747;
+    line-height: 28px;
+    font-size: 13px;
+    margin-bottom: 30px;
+}
+.footer-container .icons a{
+    margin-right: 24px;
+}
+.footer-container form input[type="text"], .footer-container textarea{
+    width: 461px;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
+    color: #757575;
+}
 
 
 
